# magpie

./: Cargo.toml
desktop-notifications/: Cargo.toml  LICENSE
desktop-notifications/src/: lib.rs  notification_builder.rs  notification_handle.rs  notification_result.rs  notification_result_handle.rs
desktop-notifications/src/dbus/: mod.rs
desktop-notifications/src/dbus/job_view/: client.rs  types.rs
desktop-notifications/src/dbus/job_view_server/: client.rs  types.rs
desktop-notifications/src/dbus/network_manager/: client.rs  types.rs
desktop-notifications/src/dbus/notification/: client.rs
desktop-notifications/src/dbus/notification/types/: actions.rs  capability.rs  category.rs  hint.rs  image.rs  image_path.rs  mod.rs  notification_close_reason.rs  notification_id.rs  server_information.rs  sound_context.rs  sound_name.rs  timeout.rs  urgency.rs
magpie/: Cargo.toml
magpie/src/: main.rs
